# actant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
actant/: __init__.py  agents.py  cli.py  core.py  inbox.py
actant/_assets/: temporal-compose.yml
actant/llm/: __init__.py  base.py  errors.py  messages.py  rate_limit.py  routing.py
actant/llm/providers/: __init__.py  _shared.py  anthropic.py  fake.py  gemini.py  openai.py  qwen.py
actant/memory/: __init__.py  cards.py  context.py  manifest.py  store.py  tools.py
actant/runtime/: __init__.py  completion.py  coordinator.py  exceptions.py  hooks.py  runtime.py  session.py  thread.py
actant/runtime/events/: __init__.py  lifecycle.py  publisher.py  streaming.py  types.py
actant/runtime/executors/: __init__.py  base.py  temporal.py  temporal_activities.py  temporal_types.py  temporal_workflows.py
actant/runtime/interfaces/: __init__.py  events.py  session.py  stores.py
actant/runtime/stores/: __init__.py  in_memory.py
actant/runtime/stores/postgres/: __init__.py  conversion.py  models.py  sqlalchemy.py  stores.py
actant/runtime/temporal/: __init__.py  activities.py  client.py  types.py  worker.py  workflow.py
actant/runtime/temporal/activities/: __init__.py  context.py  runs.py  threads.py  tools.py
actant/runtime/types/: __init__.py  context.py  orchestration.py  session.py  threads.py
actant/tools/: __init__.py  admission.py  base.py  calls.py  function.py  registry.py  task.py
docs/: README.md  actant-runtime-guide.md  architecture.md  concepts.md  coordinator-guide.md  pauses-and-resume.md  releasing.md  subagents.md  tools-guide.md  why-actant.md
examples/: README.md
examples/demo/server/: README.md  pyproject.toml
examples/demo/server/app/: agents.py  coordinator.py  llm.py  main.py  routes.py  tools.py
examples/demo/ui/: .gitignore  README.md  index.html  package.json  playwright.config.ts  test-setup.ts  tsconfig.json  vite.config.ts
examples/demo/ui/e2e/: demo.spec.ts  live-demo.spec.ts
examples/demo/ui/scripts/: sse_smoke.ts
examples/demo/ui/src/: App.tsx  main.tsx  vite-env.d.ts
examples/demo/ui/src/chat/: AssistantMarkdown.tsx  ChatPage.tsx  Composer.tsx  DeferredPanel.tsx  EmptyStage.tsx  EventRow.tsx  MessageList.tsx  NestedTranscript.tsx  ToolCallRow.tsx  TurnRow.tsx  UserRow.tsx  api.ts  formatTimestamp.ts  history.ts  reducer.ts  sseClient.ts  state.ts  subThreads.ts  turnLogic.ts  useAgentConsole.ts  useStickyScroll.ts  useThreadsList.ts  wire.ts
examples/demo/ui/src/chat/__tests__/: DeferredPanel.render.test.tsx  ToolCallRow.render.test.tsx  TurnRow.render.test.tsx  history.test.ts  reducer.test.ts  sseClient.test.ts  subThreads.test.ts  wire.test.ts
examples/demo/ui/src/chat/sidebar/: ThreadNavItem.tsx  ThreadSidebar.tsx
examples/demo/ui/src/components/ui/: collapsible.tsx
examples/demo/ui/src/styles/: global.css
scripts/: temporal_smoke.py
tests/: test_admit_execute_infallibility.py  test_cli.py  test_coordinator_primitives.py  test_documentation_snippets.py  test_function_tool.py  test_import_graph.py  test_llm_adapters.py  test_memory.py  test_message_store.py  test_message_store_parts.py  test_resolve_tool_stale.py  test_run_store_finish_idempotency.py  test_runtime_import_compatibility.py  test_session_multimodal.py  test_sqlalchemy_models.py  test_streaming.py  test_task_tool_per_call.py  test_temporal_client.py  test_temporal_configuration.py  test_temporal_executor.py  test_thread_handle.py  test_tool_call_store.py  test_tool_resolution_errors.py  test_worker_events.py  test_workflow_cancel_finalization.py  test_workflow_thread.py
