[project]
name = "actant"
version = "0.1.0"
description = "Runtime kernel for long-lived agents with inboxes, memory, tools, policies, environments, and replay"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "sqlalchemy>=2.0",
  # Temporal is the only supported runtime executor today; treating it
  # as a hard dep lets us hard-import the SDK and type its surface
  # properly instead of guarding every call site behind a runtime
  # ImportError shim.
  "temporalio>=1.8",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=1.0"]
openai = ["openai>=1.60"]
qwen = ["openai>=1.60"]
providers = [
  "anthropic>=0.40",
  "google-genai>=1.0",
  "openai>=1.60",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "pyright>=1.1",
  "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["actant"]

[tool.hatch.build.targets.wheel.force-include]
"actant/py.typed" = "actant/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99

[dependency-groups]
dev = []
