[project]
name = "actant"
version = "0.2.0"
description = "Temporal-native runtime for persistent agents with durable inboxes, governed tools, and replay"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["agents", "llm", "temporal", "workflow", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.0",
  "sqlalchemy>=2.0",
  # Temporal is the only supported runtime executor today; treating it
  # as a hard dep lets us hard-import the SDK and type its surface
  # properly instead of guarding every call site behind a runtime
  # ImportError shim.
  "temporalio>=1.8",
]

[project.scripts]
actant = "actant.cli:main"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=1.0"]
openai = ["openai>=1.60"]
qwen = ["openai>=1.60"]
providers = [
  "anthropic>=0.40",
  "google-genai>=1.0",
  "openai>=1.60",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "pyright>=1.1",
  "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/johnathanchiu/actant"
Repository = "https://github.com/johnathanchiu/actant"
Issues = "https://github.com/johnathanchiu/actant/issues"
Documentation = "https://github.com/johnathanchiu/actant/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["actant"]

[tool.hatch.build.targets.wheel.force-include]
"actant/py.typed" = "actant/py.typed"
"actant/_assets/temporal-compose.yml" = "actant/_assets/temporal-compose.yml"

[tool.hatch.build.targets.sdist]
include = [
  "/actant",
  "/docs",
  "/tests",
  "/LICENSE",
  "/CHANGELOG.md",
  "/README.md",
  "/pyproject.toml",
]
exclude = [
  "**/.venv",
  "**/__pycache__",
  "**/node_modules",
  "**/*.pyc",
  "**/*.tsbuildinfo",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 99
