[project]
name = "actant-demo-server"
version = "0.1.0"
description = "Minimal FastAPI + SSE server demonstrating actant. Wraps AgentRuntime and an in-process Temporal worker."
requires-python = ">=3.11"
dependencies = [
  "actant[openai,anthropic,gemini]",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sse-starlette>=2.1",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
]

[tool.uv.sources]
actant = { path = "../../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
